--- a/mediaplayer.html
+++ b/mediaplayer.html
@@ -6,9 +6,9 @@
     <title>Media Player</title>
 </head>
 <body>
-    <div><video src="video.mp4" height="450" width="450" controls autoplay></video>
-    <video src="video.mp4" height="450" width="450" controls autoplay></video></div>
-    <div><video src="video.mp4" height="450" width="450" controls autoplay></video>
-    <video src="video.mp4" height="450" width="450" controls autoplay></video></div>
+    <video src="video.mp4" height="450" width="24.5%" controls autoplay></video>
+    <video src="video.mp4" height="450" width="24.5%" controls autoplay></video>
+    <video src="video.mp4" height="450" width="25%" controls autoplay></video>
+    <video src="video.mp4" height="450" width="25%" controls autoplay></video>
 </body>
 </html>
