--- a/card.html
+++ b/card.html
@@ -12,7 +12,9 @@
         text-align: center;
         border-radius: 15px;
         box-shadow: 5px 5px 10px 5px gray;
-        margin: 100px 600px;
+        display: flexbox;
+        overflow: auto;
+        background-color: lightgreen;
       }
       .div1 {
         border-radius: 10px;
@@ -20,17 +22,10 @@
         width: 20vw;
       }
       .image {
-        border-radius: 10px;
-        height: 200px;
-        width: 300px;
+        border-radius: 15px;
+        height: 28vh;
+        width: 19vw;
         padding: 2px;
-      }
-      .para1 {
-        overflow: scroll;
-      }
-      span{
-        border-radius: 6px;
-        border: solid rgb(188, 188, 188);
       }
       button{
         border-radius: 6px;
@@ -46,7 +41,7 @@
         <img class="image" src="nature.jpeg" alt="" />
       </div>
       <div class="div2">
-        <span>Nature</span>
+        <span>Nature |</span>
         <span>Lake</span>
       </div>
       <div class="div3">
